--- a/Software/ELConsole/Release_notes.txt
+++ b/Software/ELConsole/Release_notes.txt
@@ -1,4 +1,8 @@
 EngineLab El Console release notes:
+
+Version 1.97.8616
+- A fix for renaming items in the item properties diaog. In the previous version, a name change would have created an extern for the previous namer and the existing model would lose connectivity to the changed item. This fix will restore the connectivity when the item is changed in the item properties dialog.
+
 Version 1.97.8613
 - A minor fix for the ability to create several items. Stricter item validation was added that filtered the ability to create certain items and this has been resolved.
  
